# hello

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.cursor/rules/: prd.mdc
.github/workflows/: ci.yml
tests/: test_main.py
